<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_marginBottom="16dp">

    <ImageView
        android:id="@+id/item_photo"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_margin="16dp"
        android:src="@drawable/meeting_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>


    <TextView
        android:id="@+id/item_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:textStyle="bold"
        android:textColor="@color/primaryTextColor"
        app:layout_constraintStart_toEndOf="@+id/item_photo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@id/item_list_delete_button"
        tools:text="Salle - Heure - Sujet" />


    <TextView
        android:id="@+id/item_participant"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:ellipsize="end"
        android:lines="1"
        app:layout_constraintStart_toEndOf="@id/item_photo"
        app:layout_constraintTop_toBottomOf="@+id/item_title"
        app:layout_constraintEnd_toStartOf="@id/item_list_delete_button"
        tools:text="utilisateur@pouette.com; utilisateur2@pouette.com; utilisateur3@pouette.com"
        />

    <ImageButton
        android:id="@+id/item_list_delete_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@null"
        android:minWidth="40dp"
        android:minHeight="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:srcCompat="@drawable/ic_baseline_delete_24"
        tools:ignore="SpeakableTextPresentCheck"
        app:tint="#3F445E" />

</androidx.constraintlayout.widget.ConstraintLayout>